商品分类功能完成

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -26,3 +26,9 @@ body,
 .ql-editor {
   min-height: 500px;
 }
+
+.content-card .el-card__body {
+  height: calc(100vh - 140px);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
