--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -11,6 +11,7 @@ body,
   font-size: 12px;
 }
 .el-card {
+  padding: 10px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12) !important;
 }
 .el-pagination {
@@ -19,6 +20,9 @@ body,
 /* .el-cascader-menu {
   height: 300px;
 } */
+.el-table{
+  margin-top: 20px;
+}
 .el-cascader-menu__wrap,
 .el-scrollbar__wrap {
   height: 290px !important;
@@ -27,11 +31,21 @@ body,
   min-height: 500px;
 }
 
-.content-card .el-card__body {
-  height: calc(100vh - 140px);
-  overflow-y: auto;
-  overflow-x: hidden;
-}
+.el-card .el-card__body {
+  height: calc(100vh - 160px) !important;
+  overflow-y: hidden;
+  }
+  .el-card .el-card__body:hover {
+  overflow-y: overlay;
+  }
+  ::-webkit-scrollbar {
+  background-color: white;
+  width: 10px;
+  }
+  ::-webkit-scrollbar-thumb {
+  background-color: #ddd;
+  border-radius: 10px;
+  }
 
 .el-steps{
   margin: 15px 0;
